<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollRegistro1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear1Registro1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:hintEnabled="true"
                    android:hint="@string/nombre">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="1"
                        android:inputType="textPersonName"
                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputApellido"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:hintEnabled="true"
                    android:hint="@string/apellido">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editApellido"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="1"
                        android:inputType="textPersonName"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputCorreoElectronico"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:hintEnabled="true"
                    android:hint="@string/correo">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editCorreoElectronico"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="1"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/contrasena"
                        android:lines="1"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputContrasenaConfirmacion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editContrasenaConfirmacion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirma_contrasena"
                        android:lines="1"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/telefono"
                        android:lines="1"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/continuar" />

    </LinearLayout>


</ScrollView>
